--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 #--------------------------
 
-title: Chirpy                          # the main title
+title: 雨灵的博客                          # the main title
 
 tagline: A text-focused Jekyll theme.  # it will display as the sub-title
 
@@ -18,7 +18,7 @@ description: >-                        # used by seo meta and the atom feed
   and focuses on text presentation.
 
 # fill in the base hostname & protocol for your site, e.g., 'https://username.github.io'
-url: ''
+url: 'https://yuling-Shine.github.io'
 
 author: your_full_name                  # change to your full name
 
@@ -201,7 +201,7 @@ sitemap_exclude:  # Sitemap will exclude the following items.
     - redirects.json
 
 # see: <https://github.com/jekyll/jekyll-archives/blob/master/docs/configuration.md>
-jekyll-archives:  
+jekyll-archives:
   enabled: [categories, tags]
   layouts:
     category: category
