--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@
 
 title: 雨灵的博客                          # the main title
 
-tagline: A text-focused Jekyll theme.  # it will display as the sub-title
+tagline: Do not go gentle into that good night.  # it will display as the sub-title
 
 description: >-                        # used by seo meta and the atom feed
   A minimal, portfolio, sidebar,
@@ -20,7 +20,7 @@ description: >-                        # used by seo meta and the atom feed
 # fill in the base hostname & protocol for your site, e.g., 'https://username.github.io'
 url: 'https://yuling-Shine.github.io'
 
-author: your_full_name                  # change to your full name
+author: 雨灵                  # change to your full name
 
 avatar: /assets/img/sample/avatar.jpg   # support internet resources
 
