--- a/_config.yml
+++ b/_config.yml
@@ -13,9 +13,7 @@ title: 雨灵的博客                          # the main title
 tagline: Do not go gentle into that good night.  # it will display as the sub-title
 
 description: >-                        # used by seo meta and the atom feed
-  A minimal, portfolio, sidebar,
-  bootstrap Jekyll theme with responsive web design
-  and focuses on text presentation.
+  Java,Python
 
 # fill in the base hostname & protocol for your site, e.g., 'https://username.github.io'
 url: 'https://yuling-Shine.github.io'
